@@ -65,10 +65,18 @@ RegisterSet RegisterSet::calleeSaveRegisters()
     result.set(X86Registers::r14);
     result.set(X86Registers::r15);
 #elif CPU(ARM64)
+    // We don't include LR in the set of callee-save registers even though it technically belongs
+    // there. But, the way we use this list, it makes no sense to have it there.
     for (
         ARM64Registers::RegisterID reg = ARM64Registers::x19;
         reg <= ARM64Registers::x28;
         reg = static_cast<ARM64Registers::RegisterID>(reg + 1))
+        result.set(reg);
+    result.set(ARM64Registers::fp);
+    for (
+        ARM64Registers::FPRegisterID reg = ARM64Registers::q8;
+        reg <= ARM64Registers::q15;
+        reg = static_cast<ARM64Registers::FPRegisterID>(reg + 1))
         result.set(reg);
 #else
     UNREACHABLE_FOR_PLATFORM();
