@@ -1,5 +1,15 @@
 2014-02-17  Filip Pizlo  <fpizlo@apple.com>
 
+        Fix RegisterSet::calleeSaveRegisters() by making it correct on ARM64
+        https://bugs.webkit.org/show_bug.cgi?id=128921
+
+        Reviewed by Mark Hahnenberg.
+
+        * jit/RegisterSet.cpp:
+        (JSC::RegisterSet::calleeSaveRegisters):
+
+2014-02-17  Filip Pizlo  <fpizlo@apple.com>
+
         RegisterSet::calleeSaveRegisters() should know about ARM64
         https://bugs.webkit.org/show_bug.cgi?id=128918
 
